  * debian/control: Add alternative (build-)depends to heimdal-dev.
  * debian/rules, debian/cupsys.postinst: Call update-rc.d to not install stop
    symlinks for runlevels 0 and 6, since they just needlessly slow down
    shutdown. Remove the obsolete kill symlinks on upgrade. Patch adopted from
    the Ubuntu branch, but without using the Ubuntu-only 'multiuser' mode of
    update-rc.d.

 -- Martin Pitt <mpitt@debian.org>  Sun, 16 Mar 2008 21:16:10 +0100

cupsys (1.3.6-1) unstable; urgency=low

  * New upstream bugfix release.
  * Remove the following patches which are upstream now:
    - fix_regression_reactivate_net_ifaces_changes_detection.dpatch
    - web-interface-breaks-default-auth-setting.dpatch
  * search_mime_files_in_usr_share.dpatch: Greatly simplified the patch by
    using mimeMerge(), so that it is more robust against upstream changes.
    Forwarded to STR#2719.
  * Dropped cupsd.conf-AllowLocal.dpatch; it does not do anything good any
    more for the current web and GUI administration tools (they handle this
    fine by themselves), so it's obsolete now.
  * Drop enable{sharing,browsing} and {sharing,browsing}_status scripts. They
    have never been used in Debian, not used any more in Ubuntu, and the
    current frontends (web, system-config-printer, etc.) do this in a much
    better way.
  * debian/docs: Remove redundant LICENSE.txt.
  * debian/rules: Add a generic rule to install lintian overrides in
    debian/packagename.lintian.
  * Add lintian overrides for unjustified/wontfix complaints about libcupsys2
    and cupsys.
  * debian/cupsys.doc-base: Remove erroneous whitespace in the section
    separator.
  * debian/rules: Remove *.o and *.so files from PHP scripting examples
    directory (it's /usr/share after all).
  * debian/cupsys.init.d: Add Short-Description.
  * debian/rules: Do not ship an empty /usr/share/cups/model/ directory.

 -- Martin Pitt <mpitt@debian.org>  Tue, 26 Feb 2008 14:23:50 +0100
