@@ -35,8 +35,12 @@ cupsys (1.3.6-2) UNRELEASED; urgency=low
     shutdown. Remove the obsolete kill symlinks on upgrade. Patch adopted from
     the Ubuntu branch, but without using the Ubuntu-only 'multiuser' mode of
     update-rc.d.
+  * Add debian/local/apparmor-profile: AppArmor profile (taken from Ubuntu
+    branch). Install it in debian/rules if package is built on Ubuntu (tested
+    with lsb_release -is). Reload AppArmor in debian/cupsys.postinst if both
+    the cupsys profile and AppArmor itself are present.
 
- -- Martin Pitt <mpitt@debian.org>  Sun, 16 Mar 2008 21:16:10 +0100
+ -- Martin Pitt <mpitt@debian.org>  Sun, 16 Mar 2008 21:38:47 +0100
 
 cupsys (1.3.6-1) unstable; urgency=low
 
